# PhysicsAnimation

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: Rasterizer.hpp.FE751F55E13604A0.idx  Render.cpp.EBC7E4268DDEE37E.idx  Render.hpp.393E9B38F8930150.idx  main.cpp.EAB2CD72BB815D18.idx  svpng.cpp.56B0299548532896.idx  svpng.h.88EA59970F796630.idx
include/: .Vec2.hpp.swp  Rasterizer.hpp  Render.hpp
include/Math/: Vec2.hpp  Vec3.hpp
include/math/: .Vec2.hpp.swp  Vec2.hpp
include/svpng/: svpng.h  svpng.h.bak
src/: Rasterizer.cpp  Render.cpp  main.cpp
src/Math/: Vec2.cpp  Vec3.cpp
src/math/: Vec2.cpp
src/svpng/: svpng.cpp
